# schnauzerUI

./: 404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl  basics.html  blech.sui  cli.html  counts.html  counts.json  counts.sui  index.html  installation.html  introduction.html  like_fetch_rewards.sui  print.html  search_youtube.sui  searchindex.js  searchindex.json  statements_and_commands.html  test.html  test.json  test.sui  test_dt.csv  testing.sui  testing_file.html  youtube_search.sui
.github/workflows/: deploy_narrative_docs.yaml  release.yaml  static.yml
example_repl_script/: test.sui
explanation/: what_schnauzer_ui_knows.html
html/: if_stmt.html  locate.html  test1.html
main_report/: main.html  main.json
narrative_docs/: book.toml
narrative_docs/src/: SUMMARY.md  basics.md  cli.md  commands.md  installation.md  introduction.md  statements_and_commands.md
narrative_docs/src/explanation/: what_schnauzer_ui_knows.md
narrative_docs/src/reference/: statements_and_commands.md
narrative_docs/src/tutorials/: quickstart.md
reference/: statements_and_commands.html
scripts/: scratch.sui  scroll_into_view_test.sui  test1.sui  test2.sui
scripts/scroll_into_view/: scroll_into_view_test.sui
scripts/test1/: test1.sui
scripts/youtube_tests/: search_and_navigate_home.sui
src/: datatable.rs  environment.rs  interpreter.rs  lib.rs  parser.rs  scanner.rs  test_report.rs  webdriver.rs
templates/: product_doc.stpl  test_report.stpl
test_scripts/: demo.html  demo.json  demo.sui  main.sui  testing_upload.sui  youtube_example.sui
test_scripts/demo_report/: demo.html  demo.json
test_scripts/main_report/: main.html  main.json
test_scripts/reports/: demo.html  demo.json  main.html  main.json
test_scripts/upload_report/: testing_upload.html  testing_upload.json
tests/: all_tests.rs  catch-error.rs  commands.rs  common.rs  health_check.rs  if_stmt.rs  locate.rs  locators.rs  readme.rs  smart_swap.rs  statements.rs  variables.rs
tests/assets/: test_file_for_upload.txt
tests/html/: login.html  scroll_into_view_test.html  variables.html
tutorials/: quickstart.html
youtube_search_report/: search_youtube.html
