[package]
name = "schnauzerUI"
version = "0.1.0"
edition = "2021"

[lib]
name = "schnauzer_ui"
path = "src/lib.rs"

[[bin]]
name = "sui"
path = "src/bin/cli.rs"

[dependencies]
async-recursion = "1.0.0"
async_once = "0.2.6"
chrono = "0.4.22"
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3.24"
thirtyfour = { git = "https://github.com/stevepryde/thirtyfour", branch = "main" }
promptly = "0.3.1"
tokio = "1.21.2"
tracing-subscriber = "0.3.16"
walkdir = "2.3.2"
csv = "1.1.6"
webdriver-install = "0.3.2"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
build_html = "2.2.0"
serde_json = "1.0.91"
sailfish = "0.5.0"
uuid = { version = "1.2.2", features = ["v4"] }
anyhow = "1.0.69"
