[package]
name = "schnauzer_ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "schnauzer_ui"
path = "src/lib.rs"

[[bin]]
name = "sui"
path = "src/bin/cli.rs"

[dependencies]
async-recursion = "1.0.0"
chrono = "0.4.22"
clap = { version = "4.0.8", features = ["derive"] }
thirtyfour = { git = "https://github.com/stevepryde/thirtyfour", rev = "0fb0239" }
promptly = "0.3.1"
tokio = "1.21.2"
walkdir = "2.3.2"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
sailfish = "0.5.0"
anyhow = "1.0.69"
camino = { version = "1.1.6", features = ["serde", "serde1"] }

[dev-dependencies]
serial_test = "0.10"
